Document PMD fixes inline